// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sophisticated Integration conditional union selections 1`] = `
Object {
  "data": Object {
    "deities": Array [
      Object {
        "__typename": "God",
        "lifespan": "Immortal",
        "name": "Morpheus",
      },
      Object {
        "__typename": "Deity_Titan",
        "name": "Cronos",
      },
    ],
  },
}
`;

exports[`Sophisticated Integration conditional union selections 2`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 13,
          "line": 6,
        },
      ],
      "message": "Data \\"Lifespan\\" cannot represent value: \\"Thor\\"",
      "path": Array [
        "deities",
        0,
        "lifespan",
      ],
    },
  ],
}
`;

exports[`Sophisticated Integration union type names 1`] = `
Object {
  "data": Object {
    "deities": Array [
      Object {
        "__typename": "God",
      },
      Object {
        "__typename": "Deity_Titan",
      },
    ],
  },
}
`;
